# claude-code-manager

./: README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: claude-code-manager.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_usage.py  db.rs  history.rs  lib.rs  server.rs  session.rs  stt.rs  usage.rs
src/lib/: Chat.svelte  Markdown.svelte  Message.svelte  RightPanel.svelte  Settings.svelte  Sidebar.svelte  SimpleModal.svelte  SlashPalette.svelte  ToolUse.svelte  WebLogin.svelte  api.ts  audio.ts  notify.ts  parseEvent.ts  slashCommands.ts  store.svelte.ts  types.ts
src/routes/: +page.svelte
static/: manifest.webmanifest
