[package]
name = "claude-code-manager"
version = "0.2.0"
description = "Claude Code Manager"
authors = ["e-xiste"]
edition = "2021"

[lib]
name = "claude_code_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
libc = "0.2"
axum = { version = "0.7", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "set-header"] }
futures-util = "0.3"
rand = "0.8"
